Closed Bug 760899 Opened 13 years ago Closed 13 years ago

Cannot build debug Firefox with gstreamer enabled

Categories

(Core :: Audio/Video, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla16

People

(Reporter: stephen.moehle, Assigned: stephen.moehle)

Details

Attachments

(1 file)

Cannot build debug Firefox with gstreamer enabled (--enable-debug and --enable-gstreamer). Compiling content/media/gstreamer/nsGStreamerReader.cpp fails with multiple: error: unable to find string literal operator ‘operator"" GST_TIME_FORMAT’ The fix is to add a space between the string literal GST_TIME_FORMAT and the string literal that proceeds it. Nightly Firefox Fedora 17 with GCC 4.7.0
Attachment #629554 - Flags: review+
Comment on attachment 629554 [details] [diff] [review] Patch to fix build errors Thanks, Stephen! review+ is for reviewed patches, though. You're looking for the review? flag instead.
Attachment #629554 - Flags: review+ → review?(kinetik)
Comment on attachment 629554 [details] [diff] [review] Patch to fix build errors Thanks!
Attachment #629554 - Flags: review?(kinetik) → review+
Assignee: nobody → stephen.moehle
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Target Milestone: mozilla15 → mozilla16
(This didn't make it in time for 15).
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: