Bug 760899 - Fix debug builds with gstreamer enabled - r=kinetik